--- a/daiweisi/report/BOTAFIGA.html
+++ b/daiweisi/report/BOTAFIGA.html
@@ -58,7 +58,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 85.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 8</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Skorupski - 4</div>
+        <div class="difensori giocatori">|Kristensen-6||Beukema-6||Birindelli-6||N'dicka-6.5|</div>
+        <div class="centrocampisti giocatori">|Aouar-9.5||Zaccagni-6.5||Weah-6|</div>
+        <div class="attaccanti giocatori">|Brekalo-10||Krstovic-9.5||Martinez L.-9|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Skorupski</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4 (6)</span> <br><span class="aligned-span">Hysaj</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Faraoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">N'dicka</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Birindelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Beukema</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Kristensen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Zaccagni</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Kastanos</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Aouar</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Weah</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">De Ketelaere</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">4 (6)</span> <br><span class="aligned-span">Boloca</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Makoumbou</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Martinez L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9 (6.5)</span> <br><span class="aligned-span">Brekalo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Krstovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Ravaglia F.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Christensen O.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Lazzari</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Dodo'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Radonjic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Lapadula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Davis K.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Retegui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 80</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 234</h1>
+    <h1>TOTALE PUNTI MASSIMO: 314</h1>
 </body>
 </html>
