--- a/daiweisi/report/CSKABurri.html
+++ b/daiweisi/report/CSKABurri.html
@@ -58,7 +58,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 73</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 8</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Ochoa - 2.5</div>
+        <div class="difensori giocatori">|Schuurs-5.5||Dragusin-6.5||Marchizza-7.5||Zappacosta-5.5|</div>
+        <div class="centrocampisti giocatori">|Colpani-10||Ederson D.s.-9.5||Ferguson-7.5||Strefezza-6.5|</div>
+        <div class="attaccanti giocatori">|Caputo-6||Rafael Leao-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Meret</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2 (5)</span> <br><span class="aligned-span">Ochoa</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2.5 (5.5)</span> <br><span class="aligned-span">Zappacosta</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Bastoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (5)</span> <br><span class="aligned-span">Marchizza</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Hernandez T.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Dragusin</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Perez N.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Holm</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Schuurs</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">De Roon</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Walace</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Strefezza</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Ricci S.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Ederson D.s.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (6.5)</span> <br><span class="aligned-span">Ferguson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (7)</span> <br><span class="aligned-span">Colpani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Ramadani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Pinamonti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Caputo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Rafael Leao</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Dia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Gollini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Mulattieri</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Toure' E.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 74</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 223.5</h1>
+    <h1>TOTALE PUNTI MASSIMO: 297.5</h1>
 </body>
 </html>
