--- a/daiweisi/report/WandaNazionale.html
+++ b/daiweisi/report/WandaNazionale.html
@@ -58,7 +58,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 0</h4>
     <h3>Punteggio: 81.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 8</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Rui Patricio - 5</div>
+        <div class="difensori giocatori">|Tomori-6||Pavard-6||Cuadrado-5.5||Romagnoli-6|</div>
+        <div class="centrocampisti giocatori">|Bonaventura-9.5||Kostic-7.5||Ikone'-6.5|</div>
+        <div class="attaccanti giocatori">|Gonzalez N.-10||Colombo-6||Luvumbo-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Terracciano</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6.5)</span> <br><span class="aligned-span">Rui Patricio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span> <br><span class="aligned-span">Romagnoli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Cuadrado</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Pavard</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Tomori</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Bellanova</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Bakker</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Zielinski</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Bonaventura</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Ikone'</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Kostic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Scamacca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Gonzalez N.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Raspadori</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Colombo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Luvumbo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Lauriente'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Svilar</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Kalulu</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Posch</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Pellegrini Lo.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Messias</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Volpato</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Mboula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 75</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 246</h1>
+    <h1>TOTALE PUNTI MASSIMO: 321</h1>
 </body>
 </html>
