--- a/daiweisi/report/GuardaMilanoFC.html
+++ b/daiweisi/report/GuardaMilanoFC.html
@@ -58,7 +58,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 0</h4>
     <h3>Punteggio: 79.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 8</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Turati - 5</div>
+        <div class="difensori giocatori">|Bijol-6.5||Vina-6||Mari'-6.5||Mancini-6||Sabelli-6|</div>
+        <div class="centrocampisti giocatori">|Pessina-10||Arthur Melo-6.5||Candreva-6|</div>
+        <div class="attaccanti giocatori">|Castellanos-11.5||Osimhen-10|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Sommer</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4 (6)</span> <br><span class="aligned-span">Turati</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span> <br><span class="aligned-span">Sabelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mancini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mari'</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Vina</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Bijol</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Candreva</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Cristante</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Pessina</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Arthur Melo</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Marin</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Coulibaly L.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">-0.5 (0)</span> <br><span class="aligned-span">Gudmundsson A.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Simeone</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Pedro</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Cambiaghi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Osimhen</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Castellanos</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">11.5 (7.5)</span> <br><span class="aligned-span">Cerofolini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Mario Rui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Juan Jesus</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Martin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Fagioli</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Chiesa</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 81</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 237</h1>
+    <h1>TOTALE PUNTI MASSIMO: 318</h1>
 </body>
 </html>
