--- a/daiweisi/report/Jultimi.html
+++ b/daiweisi/report/Jultimi.html
@@ -58,7 +58,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 75</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 8</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Di Gregorio - 7</div>
+        <div class="difensori giocatori">|Ebuehi-6||Di Lorenzo-6||Kolasinac-9.5||Marusic-5.5|</div>
+        <div class="centrocampisti giocatori">|Calhanoglu-7||Gagliardini-6.5||Luis Alberto-6.5||Locatelli-6|</div>
+        <div class="attaccanti giocatori">|Muriel-6||Petagna-5.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Maignan</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span> <br><span class="aligned-span">Di Gregorio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">Marusic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Kolasinac</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">9.5 (6.5)</span> <br><span class="aligned-span">Di Lorenzo</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ebuehi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Lazovic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Gagliardini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Locatelli</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Luis Alberto</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Calhanoglu</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (6)</span> <br><span class="aligned-span">Zambo Anguissa</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Petagna</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Muriel</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Zapata D.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Kvaratskhelia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Okafor</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Sportiello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Izzo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Darmian</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Lucumi'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Hien</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Krunic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Adopo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Deulofeu</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 73.5</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 236</h1>
+    <h1>TOTALE PUNTI MASSIMO: 309.5</h1>
 </body>
 </html>
