--- a/daiweisi/report/mobile/CSKABurri.html
+++ b/daiweisi/report/mobile/CSKABurri.html
@@ -61,7 +61,25 @@
   <div>Punteggio: 73</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 8</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Ochoa - 2.5</div>
+    <div class="player" style="top: 17%; left: 20%;">Schuurs - 5.5</div><div class="player" style="top: 37%; left: 20%;">Dragusin - 6.5</div><div class="player" style="top: 57%; left: 20%;">Marchizza - 7.5</div><div class="player" style="top: 77%; left: 20%;">Zappacosta - 5.5</div> 
+    <div class="player" style="top: 17%; left: 40%;">Colpani - 10</div><div class="player" style="top: 37%; left: 40%;">Ederson D.s. - 9.5</div><div class="player" style="top: 57%; left: 40%;">Ferguson - 7.5</div><div class="player" style="top: 77%; left: 40%;">Strefezza - 6.5</div>
+    <div class="player" style="top: 37%; left: 70%;">Caputo - 6</div><div class="player" style="top: 57%; left: 70%;">Rafael Leao - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Meret</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2 (5)</span></li><li><span class="aligned-span">Ochoa</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2.5 (5.5)</span></li><li><span class="aligned-span">Zappacosta</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Bastoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (5)</span></li><li><span class="aligned-span">Marchizza</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Hernandez T.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Dragusin</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Perez N.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Holm</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Schuurs</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">De Roon</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Walace</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Strefezza</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Ricci S.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ederson D.s.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (6.5)</span></li><li><span class="aligned-span">Ferguson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (7)</span></li><li><span class="aligned-span">Colpani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Ramadani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Pinamonti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Caputo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Rafael Leao</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Dia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Gollini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Mulattieri</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Toure' E.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 74</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 223.5</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 297.5</h1>
 </body>
 </html>
