--- a/daiweisi/report/mobile/GuardaMilanoFC.html
+++ b/daiweisi/report/mobile/GuardaMilanoFC.html
@@ -61,7 +61,25 @@
   <div>Punteggio: 79.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 8</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Turati - 5</div>
+    <div class="player" style="top: 7%; left: 20%;">Bijol - 6.5</div><div class="player" style="top: 27%; left: 20%;">Vina - 6</div><div class="player" style="top: 47%; left: 20%;">Mari' - 6.5</div><div class="player" style="top: 67%; left: 20%;">Mancini - 6</div><div class="player" style="top: 87%; left: 20%;">Sabelli - 6</div> 
+    <div class="player" style="top: 27%; left: 40%;">Pessina - 10</div><div class="player" style="top: 47%; left: 40%;">Arthur Melo - 6.5</div><div class="player" style="top: 67%; left: 40%;">Candreva - 6</div>
+    <div class="player" style="top: 37%; left: 70%;">Castellanos - 11.5</div><div class="player" style="top: 57%; left: 70%;">Osimhen - 10</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Sommer</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4 (6)</span></li><li><span class="aligned-span">Turati</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Sabelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Mancini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Mari'</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Vina</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bijol</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Candreva</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Cristante</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Pessina</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Arthur Melo</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Marin</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Coulibaly L.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">-0.5 (0)</span></li><li><span class="aligned-span">Gudmundsson A.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Simeone</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Pedro</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Cambiaghi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Osimhen</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Castellanos</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">11.5 (7.5)</span></li><li><span class="aligned-span">Cerofolini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Mario Rui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Juan Jesus</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Martin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Fagioli</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Chiesa</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 81</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 237</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 318</h1>
 </body>
 </html>
